--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,14 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="green">#FF00b58b</color>
+    <color name="startColor">#ff0000</color>
+    <color name="endColor">#00ff00</color>
+    <color name="transparent">#00000000</color>
+    <color name="centerColor">#0000ff</color>
+    <color name="bgColor">#dadada</color>
+    <color name="circleColor">#df6543</color>
+    <color name="textColor">#666666</color>
+    <color name="black">#000000</color>
 </resources>
