--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,18 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+<!--    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
+<!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+<!--        <item name="colorPrimary">@color/colorPrimary</item>-->
+<!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+<!--        <item name="colorAccent">@color/colorAccent</item>-->
+<!--    </style>-->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorWhite</item>
+        <item name="colorPrimaryDark">@color/colorWhite</item>
+        <item name="colorAccent">@color/colorWhite</item>
     </style>
-
     <style name="MyTextView">
         <item name="android:layout_marginLeft">20dp</item>
         <item name="android:layout_marginRight">20dp</item>
@@ -32,4 +37,32 @@
 <!--        <item name="android:backgroundDimEnabled">true</item>-->
 <!--        <item name="android:backgroundDimAmount">0.6</item>-->
     </style>
+
+
+    <declare-styleable name="BaseBar">
+        <!-- 渐变色开始色值-->
+        <attr name="startColor" format="color|reference" />
+        <!-- 渐变色中间色值-->
+        <attr name="centerColor" format="color|reference" />
+        <!-- 渐变色结束色值-->
+        <attr name="endColor" format="color|reference" />
+        <!-- 渐变条背景-->
+        <attr name="bgColor" format="color|reference" />
+        <!-- 文字颜色-->
+        <attr name="textColor" format="color|reference" />
+        <!-- 拖动园点颜色-->
+        <attr name="circleColor" format="color|reference" />
+        <!-- 文字大小-->
+        <attr name="textSize" format="dimension|reference" />
+        <!-- 进度条高度-->
+        <attr name="height" format="dimension|reference" />
+        <!-- 拖动条半径-->
+        <attr name="radius" format="dimension|reference" />
+        <!-- 为圆形的时候的 内半径-->
+        <attr name="minRadio" format="dimension|reference" />
+        <!-- 为条形的时候的 中心距离上部距离-->
+        <attr name="top" format="dimension|reference" />
+        <!-- 为条形的时候的 下面文字距离上部距离-->
+        <attr name="textTop" format="dimension|reference" />
+    </declare-styleable>
 </resources>
