--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,17 @@
     <color name="circleColor">#df6543</color>
     <color name="textColor">#666666</color>
     <color name="black">#000000</color>
+    <color name="color1">#FFFFFF</color>
+    <color name="color2">#666666</color>
+    <color name="color3">#D0D0D0</color>
+
+    <color name="color11">#59B29C</color>
+
+    <color name="color12">#7AD6BF</color>
+    <color name="color13">#9BECD9</color>
+
+    <color name="color14">#D7D1D3</color>
+    <color name="color15">#F4E161</color>
+
+    <color name="color16">#F9974E</color>
 </resources>
