--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -133,7 +133,13 @@
                     android:layout_marginRight="20dp"
                     android:text="拖动柱状图"
                     android:onClick="@{viewModel.gotoBarChart}"/>
-
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="旋转圆环"
+                    android:onClick="@{viewModel.gotoTemp}"/>
             </LinearLayout>
 
         </ScrollView>
